# football_monopoly_game

./: .gitignore  PROJECT_STRUCTURE.md  README.md  index.html
.github/workflows/: deploy.yml
js-version/: game.js  index.html  styles.css  test_simulator.js
ocaml-version/: Makefile  dune-project  football_monopoly.opam  test-bankruptcy.js  test-buyable-logic.js  test-owner-lookup.js
ocaml-version/src/: club_facts.ml  dune  game_logic.ml  game_state.ml  game_types.ml  main.ml
ocaml-version/test/: dune  test_game.ml  test_simulator.ml
ocaml-version/web/: game-ui.js  index.html  simple-test.html  styles.css  test-all-buyable-spaces.html  test-button-states.html  test-logic-simple.html  test-popup.html  test-simulator.html  test.html
